y.output

state 0
	$accept: .line $end 
	space: .    (8)

	.  reduce 8 (src line 65)

	line  goto 1
	space  goto 2

state 1
	$accept:  line.$end 
	line:  line.expr space 

	$end  accept
	'>'  shift 4
	'<'  shift 5
	'+'  shift 6
	'-'  shift 7
	'.'  shift 8
	.  error

	expr  goto 3

state 2
	line:  space.    (1)
	space:  space.SPACE 

	SPACE  shift 9
	.  reduce 1 (src line 31)


state 3
	line:  line expr.space 
	space: .    (8)

	.  reduce 8 (src line 65)

	space  goto 10

state 4
	expr:  '>'.    (3)

	.  reduce 3 (src line 35)


state 5
	expr:  '<'.    (4)

	.  reduce 4 (src line 41)


state 6
	expr:  '+'.    (5)

	.  reduce 5 (src line 47)


state 7
	expr:  '-'.    (6)

	.  reduce 6 (src line 53)


state 8
	expr:  '.'.    (7)

	.  reduce 7 (src line 59)


state 9
	space:  space SPACE.    (9)

	.  reduce 9 (src line 66)


state 10
	line:  line expr space.    (2)
	space:  space.SPACE 

	SPACE  shift 9
	.  reduce 2 (src line 32)


9 terminals, 4 nonterminals
10 grammar rules, 11/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
53 working sets used
memory: parser 3/120000
0 extra closures
7 shift entries, 1 exceptions
4 goto entries
0 entries saved by goto default
Optimizer space used: output 10/120000
10 table entries, 0 zero
maximum spread: 9, maximum offset: 9
